--- a/src/components/table/table.less
+++ b/src/components/table/table.less
@@ -215,7 +215,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@defaultBorderRadius * 1px) 0
 
     // selected row
 
-    .tr--active {
+    .is--active {
 
         td {
             background: @color-attention-22;
