--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -13,6 +13,6 @@ body {
 }
 
 ::selection {
-    background: @color-primary-15;
-    color: @color-white;
+    background: fade(@color-primary-25, 50%);
+    color: inherit;
 }
