add uncss ignore-flags

--- a/src/less/utilities/fx.less
+++ b/src/less/utilities/fx.less
@@ -1,5 +1,7 @@
 /** fx.less */
 
+/* uncss:ignore start */
+
 // initial values
 // ==============
 
@@ -247,3 +249,5 @@
     80%      { transform: translateX(.2rem); }
     90%      { transform: translateX(-.1rem); }
 }
+
+/* uncss:ignore end */
