--- a/src/less/utilities/visibility-base.less
+++ b/src/less/utilities/visibility-base.less
@@ -1,7 +1,11 @@
 /** visibility-base.less */
 
+/* uncss:ignore start */
+
 .vis-visible { visibility: visible !important; }
 .vis-hidden  { visibility: hidden !important; }
 
 .visible {}
 .hidden  { .mixin-hide !important; }
+
+/* uncss:ignore end */
