--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -37,9 +37,9 @@
 
 // font family
 
-.ff-serif { font-family: @font-serif !important; }
-.ff-sans  { font-family: @font-sansserif !important; }
 .ff-mono  { font-family: @font-mono !important; }
+.ff-sans  { font-family: @font-sansserif !important; }
+.ff-serif { font-family: @font-serif !important; }
 
 // font weight
 
@@ -48,7 +48,7 @@
 
 // font style
 
-.fst-none   { font-style: normal !important; }
+.fst-normal { font-style: normal !important; }
 .fst-italic { font-style: italic !important; }
 
 // text transform
@@ -60,9 +60,9 @@
 
 // text alignment
 
-.al-r { text-align: right !important; }
-.al-l { text-align: left !important; }
 .al-c { text-align: center !important; }
+.al-l { text-align: left !important; }
+.al-r { text-align: right !important; }
 
 // line-break
 
