--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -48,10 +48,10 @@
 
 // centering
 
-.center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+.center-content {
+    align-items: center !important;
+    display: flex !important;
+    justify-content: center !important;
 }
 
 .center-lr {
@@ -66,8 +66,9 @@
 // page cover
 
 .cover {
-    width: 100vw;
-    height: 100vh;
+    box-sizing: border-box !important;
+    height: 100vh !important;
+    width: 100vw !important;
 }
 
 // css columns
