--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -35,7 +35,7 @@
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-071-s" yoi-icon />
                         <span>Download</span>
                     </a>
-                    <a href="#menu" class="btn btn--medium btn--dark btn--flat m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
+                    <a href="#menu" class="btn btn--medium btn--light btn--flat m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                         <span class="hidden">Menu</span>
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
                     </a>
