--- a/src/less/utilities/grid-base.less
+++ b/src/less/utilities/grid-base.less
@@ -1,30 +1,5 @@
 /** grid-base.less */
 
-// simple float-based grid
-// =======================
-
-.floatGrid {
-
-    .mixin-clearfix;
-    box-sizing: border-box !important;
-    
-    [class*="w-1-1"] {
-        .mixin-clearfix;
-    }
-
-    [class*="w-1-"],
-    [class*="w-2-"],
-    [class*="w-3-"],
-    [class*="w-4-"],
-    [class*="w-5-"] {
-        float: left !important;
-    }
-
-}
-
-// more complex flexbox-based grid system
-// ======================================
-
 /*
     Learn more about flexbox:
     https://css-tricks.com/snippets/css/a-guide-to-flexbox/
@@ -33,7 +8,7 @@
     https://github.com/philipwalton/flexbugs
 */
 
-.flexGrid {
+.flx {
 
     display: flex !important;
     flex-wrap: wrap !important;
