--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -22,13 +22,13 @@
     {% endif %}
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
-        <div class="center-lr flx p-tb-2 l--m-b-8">
-            <div class="w-1-5 m--w-2-3 flx-alignStart">
+        <div class="center-lr p-tb-2 l--m-b-8 flx">
+            <div class="w-1-5">
                 <a href="{{ site.github.url }}/">
                     <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
                 </a>
             </div>
-            <div class="w-4-5 m--w-1-3 flx-alignEnd">
+            <div class="al-r w-4-5">
                 <div class="m-t-1">
                     <a href="https://github.com/yoshino-digital/yoi/" class="btn btn--medium btn--subtle">GitHub</a>
                     <a href="https://github.com/yoshino-digital/yoi/releases/latest" class="btn btn--medium btn--subtle">
