--- a/src/components/quotation/quotation.less
+++ b/src/components/quotation/quotation.less
@@ -2,12 +2,12 @@
 
 .quotation {
 
-    .mixin-defaultBorderRadius;
-    background: @color-base-25;
+    .mixin-fs-2;
     display: block;
     font-style: italic;
     padding: 2rem 2rem 2rem 7rem;
     position: relative;
+    border-left: @gray-23 2px solid;
 
     p {
         margin: 0;
