--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -3,7 +3,7 @@
 // boolean options
 
 @broadCastActiveMediaqueryToJs : true;   // make the current breakpoint accessible in JS
-@debugMediaquery               : false;  // display the active breakpoint on each page
+@debugMediaquery               : true;  // display the active breakpoint on each page
 @debugGrid                     : false;  // highlight grid-elements for debugging
 @debugBemElements              : false;  // highlight BEM-elements for debugging
 @debugBemModifiers             : false;  // highlight BEM-modifiers for debugging
