--- a/docs/_layouts/blank.html
+++ b/docs/_layouts/blank.html
@@ -12,6 +12,7 @@
         <link href="{{ site.github.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
     <body class="noJs" yoi-environment="desktop">
+        <script>document.body.className='js';</script>
         {{ content }}
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
         <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
