--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -25,7 +25,7 @@
         <div class="center-lr p-tb-2 l--m-b-8 flx">
             <div class="w-1-5">
                 <a href="{{ site.github.url }}/">
-                    <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
+                    <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/logo-yoi.svg" />
                 </a>
             </div>
             <div class="al-r w-4-5">
