update docs & update sizing utilities

--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -14,7 +14,7 @@
 
 // numeric settings
 
-@maximumPageCenterWidth        : 96rem;  // the maximum width of the .center layout utility
+@maximumPageWrapperWidth       : 100rem; // the maximum width of the .wrapper layout utility (2rem padding left & right)
 @defaultBorderRadius           : 2;      // border radius, multiplicand: 1 PX
 @sizingSteps                   : 60;     // steps for width & height utility classes, multiplicand: 1 REM
 @responsiveSizingSteps         : 60;     // steps for responsive width & height utility classes
