--- a/src/less/utilities/sizing-responsive.less
+++ b/src/less/utilities/sizing-responsive.less
@@ -31,9 +31,10 @@
     .@{bpPrefix}--w-3-5 { .w-3-5; }
     .@{bpPrefix}--w-4-5 { .w-4-5; }
 
-    // auto width
+    // auto width & height
 
     .@{bpPrefix}--w-auto { width: auto !important; }
+    .@{bpPrefix}--h-auto { height: auto !important; }
 
     // fixed width & height
 
