--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -22,7 +22,7 @@
     {% endif %}
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
-        <div class="center-lr p-tb-2 l--m-b-8 flx">
+        <div class="wrapper p-tb-2 l--m-b-8 flx">
             <div class="w-1-5">
                 <a href="{{ site.github.url }}/">
                     <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/logo-yoi.svg" />
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="center-lr flx">
+        <div class="wrapper flx">
             <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flx-2 l--flx-1">
                 {% include menu.html %}
             </nav>
@@ -51,7 +51,7 @@
                 {% include pagefooter.html %}
             </article>
         </div>
-        <footer class="center-lr flx c-gray-18 m-tb-15">
+        <footer class="wrapper flx c-gray-18 m-tb-15">
             <div class="w-1-2">YOI – the Yoshino Frontend Component Library.</div>
             <div class="w-1-2 al-r"><a href="http://yoshino.digital">Yoshino.digital GmbH</a></div>
         </footer>
