--- a/src/less/utilities/sizing-base.less
+++ b/src/less/utilities/sizing-base.less
@@ -30,9 +30,10 @@
 .w-4-5 { width: 80% !important; }
 .w-5-6 { width: 83.3% !important; }
 
-// auto width
+// auto width & height
 
 .w-auto { width: auto; }
+.h-auto { height: auto; }
 
 // fixed width & height
 
