--- a/src/less/config/typography.less
+++ b/src/less/config/typography.less
@@ -109,6 +109,15 @@
 .mixin-lh-8() { line-height: 4.5rem; }
 .mixin-lh-9() { line-height: 5rem; }
 
+// letter spacings
+// ===============
+
+.mixin-ls-0() { letter-spacing: 0; }
+.mixin-ls-1() { letter-spacing: .1rem; }
+.mixin-ls-2() { letter-spacing: .2rem; }
+.mixin-ls-3() { letter-spacing: .3rem; }
+.mixin-ls-4() { letter-spacing: .4rem; }
+
 // Responsive Type Scaling
 // =======================
 
