--- a/src/less/utilities/grid-base.less
+++ b/src/less/utilities/grid-base.less
@@ -63,21 +63,9 @@
 .flx-justifySpaceAround  { justify-content: space-around !important; }
 .flx-justifySpaceEvenly  { justify-content: space-evenly !important; }
 
-// .flx-justifyEnd,
-// .flx-justifyCenter,
-// .flx-justifySpaceBetween,
-// .flx-justifySpaceAround {
-//
-//     > * {
-//         text-align: left !important;
-//         text-align: start !important;
-//         text-align: initial !important;
-//         text-align-last: left !important;
-//         text-align-last: start !important;
-//         text-align-last: initial !important;
-//     }
-//
-// }
+// grow
+
+.flx-grow { flex-grow: 1; }
 
 // direction
 
