--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -35,6 +35,14 @@
 .lh-8 { .mixin-lh-8 !important; }
 .lh-9 { .mixin-lh-9 !important; }
 
+// letter spacing
+
+.ls-0 { .mixin-ls-0 !important; }
+.ls-1 { .mixin-ls-1 !important; }
+.ls-2 { .mixin-ls-2 !important; }
+.ls-3 { .mixin-ls-3 !important; }
+.ls-4 { .mixin-ls-4 !important; }
+
 // font family
 
 .ff-mono  { font-family: @font-mono !important; }
