--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -27,6 +27,14 @@
     .@{bpPrefix}--lh-7 { .lh-7; }
     .@{bpPrefix}--lh-8 { .lh-8; }
     .@{bpPrefix}--lh-9 { .lh-9; }
+    
+    // letter spacing
+
+    .@{bpPrefix}--ls-0 { .ls-0; }
+    .@{bpPrefix}--ls-1 { .ls-1; }
+    .@{bpPrefix}--ls-2 { .ls-2; }
+    .@{bpPrefix}--ls-3 { .ls-3; }
+    .@{bpPrefix}--ls-4 { .ls-4; }
 
     // text alignment
 
