update jekyll vars

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -30,8 +30,8 @@
             </div>
             <div class="al-r w-4-5">
                 <div class="m-t-1">
-                    <a href="https://github.com/yoshino-digital/yoi/" class="btn btn--medium btn--subtle">GitHub</a>
-                    <a href="https://github.com/yoshino-digital/yoi/releases/latest" class="btn btn--medium btn--subtle">
+                    <a href="{{ site.github.url }}" class="btn btn--medium btn--subtle">GitHub</a>
+                    <a href="{{ site.github.zip_url }}" class="btn btn--medium btn--subtle">
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-071-s" yoi-icon />
                         <span>Download</span>
                     </a>
