--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -31,10 +31,7 @@
             <div class="al-r w-4-5">
                 <div class="m-t-1">
                     <a href="{{ site.github.url }}" class="btn btn--medium btn--subtle">GitHub</a>
-                    <a href="{{ site.github.zip_url }}" class="btn btn--medium btn--subtle">
-                        <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-071-s" yoi-icon />
-                        <span>Download</span>
-                    </a>
+                    <a href="{{ site.github.zip_url }}" class="btn btn--medium btn--subtle">Download</a>
                     <a href="#menu" class="btn btn--medium btn--light btn--flat m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
                         <span class="hidden">Menu</span>
                         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
@@ -52,7 +49,7 @@
             </article>
         </div>
         <footer class="wrapper flx c-gray-18 m-tb-15">
-            <div class="w-1-2">YOI – the Yoshino Frontend Component Library.</div>
+            <div class="w-1-2">Yoi – the Yoshino Frontend Component Library</div>
             <div class="w-1-2 al-r"><a href="http://yoshino.digital">Yoshino.digital GmbH</a></div>
         </footer>
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
