--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -48,7 +48,7 @@
 
 // centering
 
-.center-content {
+.center {
     align-items: center !important;
     display: flex !important;
     justify-content: center !important;
@@ -63,7 +63,6 @@
     max-width: @maximumPageWrapperWidth !important;
     padding: 0 2rem !important;
     position: relative !important;
-    text-align: left !important;
     width: 100% !important;
 }
 
