--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=1" />
-        <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
+        <title>Yoi – Yoshino Frontend Component Library</title>
         <link href="{{ site.github.url }}/assets/css/yoi.css" rel="stylesheet" />
         <link rel="shortcut icon" href="{{ site.github.url }}/favicon.ico" type="image/x-icon" />
     </head>
