expand sizing utilities

--- a/src/less/utilities/sizing-base.less
+++ b/src/less/utilities/sizing-base.less
@@ -32,8 +32,8 @@
 
 // auto width & height
 
-.w-auto { width: auto; }
-.h-auto { height: auto; }
+.w-auto { width: auto !important; }
+.h-auto { height: auto !important; }
 
 // fixed width & height
 
@@ -52,3 +52,16 @@
 
 }
 .generate_width_height(@sizingSteps);
+
+.w-viewport { width: 1vw !important; }
+.h-viewport { height: 1vh !important; }
+
+// maximum & minimum width & height
+
+.w-max-100      { max-width: 100% !important; }
+.w-max-viewport { max-width: 1vw !important; }
+.h-max-viewport { max-height: 1vh !important; }
+
+.w-min-100      { min-width: 100% !important; }
+.w-min-viewport { min-width: 1vw !important; }
+.h-min-viewport { min-height: 1vh !important; }
