--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -2,6 +2,7 @@
 
 html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-text-size-adjust: none;
     background: @htmlBackgroundColor;
     font-size: @rootFontSize;
 }
