--- a/src/components/badge/badge.less
+++ b/src/components/badge/badge.less
@@ -107,6 +107,46 @@
     border-radius: 1.5rem;
 }
 
+// badge groups
+
+.badges {
+    
+    font-size: 0;
+    
+    .badge {
+        
+        border-radius: 0;
+
+        &:first-child {
+            border-bottom-left-radius: @defaultBorderRadius * 1px;
+            border-top-left-radius: @defaultBorderRadius * 1px;
+        }
+
+        &:last-child {
+            border-bottom-right-radius: @defaultBorderRadius * 1px;
+            border-top-right-radius: @defaultBorderRadius * 1px;
+        }
+        
+    }
+    
+    .badge--rounded {
+        
+        border-radius: 0;
+
+        &:first-child {
+            border-bottom-left-radius: @defaultBorderRadius * 1.1rem;
+            border-top-left-radius: @defaultBorderRadius * 1.1rem;
+        }
+
+        &:last-child {
+            border-bottom-right-radius: @defaultBorderRadius * 1.1rem;
+            border-top-right-radius: @defaultBorderRadius * 1.1rem;
+        }
+        
+    }
+
+}
+
 // constructor
 // ===========
 
