update tile component

--- a/src/components/tile/tile.less
+++ b/src/components/tile/tile.less
@@ -64,7 +64,7 @@ a.tile:hover .tile__image {
 // initially, only the image and title are
 // visible, the copy text appears on hover
 
-.tile.fx--slide {
+.tile--slide {
     
     // regular
     
@@ -115,7 +115,7 @@ a.tile:hover .tile__image {
 
 // the image blurs and scales up on hover
 
-.tile.fx--blur {
+.tile--blur {
     
     .tile__image {
         transition: all 600ms ease-out;
