--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -1,10 +1,14 @@
 /** root.less */
 
 html {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-text-size-adjust: none;
+    -webkit-text-size-adjust: 100%;
     background: @htmlBackgroundColor;
+    font-kerning: auto;
     font-size: @rootFontSize;
+    text-rendering: optimizeLegibility;
 }
 
 body {
