--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -1,38 +1,5 @@
 /** debug.less */
 
-// grid
-// ====
-
-[class*="w-"] when (@debugGrid = true) {
-    outline: @red-20 1px solid !important;
-    outline-style: inset !important;
-}
-
-// floats
-
-.fl-l when (@debugFloats = true) {
-    outline: @green-15 1px dotted;
-    outline-style: inset;
-}
-
-.fl-r when (@debugFloats = true) {
-    outline: @yellow-15 1px dotted;
-    outline-style: inset;
-}
-
-// BEM
-// ===
-
-[class*="__"] when (@debugBemElements = true) {
-    outline: @green-15 1px dashed !important;
-    outline-style: inset !important;
-}
-
-[class*="--"] when (@debugBemModifiers = true) {
-    outline: @yellow-15 1px dashed !important;
-    outline-style: inset !important;
-}
-
 // images
 // ======
 
@@ -73,7 +40,7 @@ img[title=""] when (@debugImages = true) {
             rgba(255,255,255,1) 50%,
             rgba(255,0,0,0) calc(50% + .5px),
             rgba(255,255,255,0) 100%),
-        rgba(255,0,0,.1);
+        rgba(255,200,200,.1);
     border: rgba(255,0,0,.2) 1px solid;
     box-sizing: border-box;
     display: block;
@@ -85,7 +52,7 @@ img[title=""] when (@debugImages = true) {
 // guides
 // ======
 
-body::before when (@showCenterGuides = true) {
+body::before when (@showGuides = true) {
     border-top: rgba(255, 0, 0, .2) 1px solid;
     content: ' ';
     position: fixed;
@@ -94,58 +61,37 @@ body::before when (@showCenterGuides = true) {
     z-index: 900;
 }
 
-html::before when (@showCenterGuides = true) {
+html::before when (@showGuides = true) {
     border-right: rgba(255, 0, 0, .2) 1px solid;
     content: ' ';
     position: fixed;
     left: 0;
     width: 50%;
     height: 100%;
-    z-index: 900;
+    z-index: 800;
 }
 
 // media queries
 // =============
 
-// "broadcast" the active mediaquery to JavaScript
-// --> YOI.currentBreakPoint()
+// display the active breakpoint for debugging
 
-body::after when (@broadCastActiveMediaqueryToJs = true) {
-
-    bottom: 0;
-    content: 'none';
-    height: 1px;
-    left: 0;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    width: 1px;
-
-    @media @bp-s  { content: 'small';  }
-    @media @bp-m  { content: 'medium'; }
-    @media @bp-l  { content: 'large';  }
-    @media @bp-xl { content: 'xlarge'; }
-
-}
-
-// display the active media query for debugging
-
-body::after when (@debugMediaquery = true) {
+body::after when (@showBreakpoint = true) {
     
     .mixin-defaultBorderRadius;
-    background-color: @gray-2;
+    background-color: @red-13;
     bottom: 2rem;
-    color: @gray-20;
+    color: @red-25;
     font-family: @font-mono;
     font-size: 1.5rem;
-    height: 5rem;
+    height: auto;
     left: 2rem;
-    line-height: 3;
+    line-height: 2;
     opacity: 1;
-    padding: 0 2rem;
+    padding: 0 1rem;
     position: fixed;
     width: auto;
-    z-index: 999;
+    z-index: 900;
 
     @media @bp-s  { content: 'small';  }
     @media @bp-m  { content: 'medium'; }
