--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -1,5 +1,7 @@
 /** root.less */
 
+// root elements
+
 html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-text-size-adjust: none;
@@ -12,6 +14,8 @@ body {
     background: @bodyBackgroundColor;
     color: @textColor;
 }
+
+// text selection
 
 ::selection {
     background: fade(@color-primary-25, 50%);
