--- a/src/components/article/article.less
+++ b/src/components/article/article.less
@@ -10,6 +10,7 @@
 
     > h1, > h2, > h3, > h4, > h5, > h6 {
         .mixin-verticalRhythm;
+        margin-bottom: -1.5rem;
     }
 
     // other block-level elements
