update customization options, update docs

--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -2,6 +2,7 @@
 
 @breakpointToJs          : true;   // make the current breakpoint accessible in JS
 @fullColorPalette        : true;   // switch between a full or optimized color palette
+@rootFontSize            : 10px;   // 10px | 0.625em;
 @maximumPageWrapperWidth : 100rem; // the maximum width of the .wrapper layout utility (2rem padding left & right)
 @defaultBorderRadius     : 2;      // border radius, multiplicand: 1 PX
 @sizingSteps             : 60;     // steps for width & height utility classes, multiplicand: 1 REM
