--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -161,7 +161,9 @@ pre code {
     font-weight: normal;
     hyphens: none;
     line-height: 1.15;
+    overflow-x: scroll;
     padding: 0 2rem 2rem 2rem;
+    position: relative;
     tab-size: 4;
     text-align: left;
     white-space: pre;
